# CoreMac

./: CoreMac.cabal  README.md  TODOs.txt
CoreFoundation/: CoreFoundation.cabal
CoreFoundation/System/: CoreFoundation.hs
CoreFoundation/System/CoreFoundation/: Array.chs  Base.chs  Boolean.chs  Bundle.chs  Data.chs  Data.hs  Date.chs  Dictionary.chs  Error.chs  Foreign.chs  NotificationCenter.chs  Number.chs  Preferences.chs  PropertyList.chs  RunLoop.chs  String.chs  String.hsc  Time.chs  URL.chs
CoreFoundation/System/CoreFoundation/Array/: Internal.hs  Mutable.chs
CoreFoundation/System/CoreFoundation/Internal/: TH.hs  Unsafe.chs  Unsafe.hs
CoreFoundation/System/CoreFoundation/String/: TH.hs
CoreFoundation/cbits/: array.c  runloop.c  string.c
CoreFoundation/include/: array.h  runloop.h
CoreGraphics/: CoreGraphics.cabal
CoreGraphics/System/: CoreGraphics.hs
CoreGraphics/System/CoreGraphics/: AffineTransform.chs  AffineTransform.hsc  Context.chs  DataProvider.chs  DataProvider.hs  Font.chs  Font.hsc  Geometry.chs
CoreGraphics/System/CoreGraphics/PDF/: Document.chs
CoreGraphics/cbits/: font.c
CoreGraphics/includes/: context.h  font.h
NSApplication/: NSApplication.cabal
NSApplication/System/NSApplication/: Main.hs
System/: CoreFoundation.hs
System/CoreFoundation/: Base.hs  Base.hsc  Data.hs  FilePath.hs  String.hsc  TH.hs  Time.hsc
System/CoreFoundation/Internal/: Unsafe.hs
System/CoreGraphics/: AffineTransform.hsc  Context.hs  DataProvider.hs  Font.hs  Font.hsc  Geometry.hsc
cbits/: context.c
examples/ExpressionEvaluator/: ExpressionController.h  ExpressionController.m
examples/ExpressionEvaluator/ExpressionEvaluator/: ExpressionEvaluator-Prefix.pch  ExpressionEvaluatorAppDelegate.h  ExpressionEvaluatorAppDelegate.m  main.m
examples/ExpressionEvaluator/ExpressionEvaluator.xcodeproj/: project.pbxproj
examples/ExpressionEvaluator/ExpressionEvaluator/en.lproj/: MainMenu.xib
examples/ExpressionEvaluator/haskell/: ExpressionParser.hs  ForeignExpr.hs
examples/FibTest/FibTest/: CocoaFib.h  CocoaFib.m  FibTest-Prefix.pch  FibTestAppDelegate.h  FibTestAppDelegate.m  main.m
examples/FibTest/FibTest.xcodeproj/: project.pbxproj
examples/FibTest/FibTest/en.lproj/: MainMenu.xib
