Name:                CoreFoundation
Version:             0.1
Synopsis:            Bindings to the Core Foundation API for Mac OS X and iOS.
Description:         This package provides bindings to the Core Foundation API for 
                     Mac OS X and iOS.  
                     .
                     Core Foundation is a C API which provides much of the
                     functionality of Apple's Objective-C Foundation framework.
                     This package provides a simpler interface than bindings like HOC
                     since it does not need to model Objective-C's
                     object-oriented interface.
                     . 
                     Several data types are \"toll-free bridged\" between Foundation and 
                     Core Foundation, meaning that the corresponding C and Objective-C 
                     types may be used interchangeably.  
                     The documentation of a module will note if 
                     an object is toll-free bridged.  
                     .
                     If you are building 64-bit applications, you should install this
                     package with @cabal install -f-32bit@.
License:             BSD3
License-file:        LICENSE
Author:              Judah Jacobson
Maintainer:          judah.jacobson@gmail.com
Copyright:           Copyright (c) 2011 Judah Jacobson
Category:            System
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  
Cabal-version:       >=1.6

flag 32bit
    Description: Use the 32-bit API.
    Default: True

Library
  -- Modules exported by the library.
  Exposed-modules:  
        System.CoreFoundation
        System.CoreFoundation.Base
        System.CoreFoundation.Data
        System.CoreFoundation.String
        System.CoreFoundation.Time

        System.CoreFoundation.Internal.TH
        System.CoreFoundation.Internal.Unsafe

  -- Packages needed in order to build this package.
  Build-depends: base==4.3.*, bytestring==0.9.*, text==0.11.*,
                 template-haskell==2.5.*
  
  Extensions: ForeignFunctionInterface, TemplateHaskell, ScopedTypeVariables
              RecordWildCards, EmptyDataDecls
  
  Build-tools: c2hs

  frameworks: CoreFoundation
  if flag(32bit) {
    cpp-options: -m32
  }
  -- Ugly hack (to get hsc2hs working) until GHC bug #5106 is fixed.
  cc-options: -march=core2 -U__BLOCKS__
