Name:                CoreFoundation
Version:             0.1
Synopsis:            Bindings to the Core Foundation API for Mac OS X and iOS.
Description:         This package provides bindings to the Core Foundation API for 
                     Mac OS X and iOS.  
                     .
                     Core Foundation is a C API which provides much of the
                     functionality of Apple's Objective-C Foundation framework.
                     This package provides a simpler interface than bindings like HOC
                     since it does not need to model Objective-C's
                     object-oriented interface.
                     . 
                     Several data types are \"toll-free bridged\" between Foundation and 
                     Core Foundation, meaning that the corresponding C and Objective-C 
                     types may be used interchangeably.  
                     The documentation of a module will note if 
                     an object is toll-free bridged.  
                     .
                     If you are building 32-bit applications, you should install this
                     package with @cabal install -f32bit@.
License:             BSD3
License-file:        LICENSE
Author:              Judah Jacobson
Maintainer:          judah.jacobson@gmail.com
Copyright:           Copyright (c) 2011 Judah Jacobson
Category:            System
Build-type:          Simple
Cabal-version:       >=1.6
source-repository head
    type: git
    location: https://github.com/judah/CoreMac

flag 32bit
    Description: Use the 32-bit API.
    Default: False

Library
  -- Modules exported by the library.
  Exposed-modules:  
        System.CoreFoundation
        System.CoreFoundation.Base
        System.CoreFoundation.Data
        System.CoreFoundation.Number
        System.CoreFoundation.RunLoop
        System.CoreFoundation.String
        System.CoreFoundation.Time

        System.CoreFoundation.Internal.TH
        System.CoreFoundation.Internal.Unsafe

  -- Packages needed in order to build this package.
  Build-depends: base>=4.3 && < 4.5, bytestring==0.9.*, text==0.11.*,
                 template-haskell>=2.5 && < 2.7
  
  Extensions: ForeignFunctionInterface, TemplateHaskell, ScopedTypeVariables
              RecordWildCards, EmptyDataDecls
  
  C-sources: cbits/runloop.c
  include-dirs: include
  includes: runloop.h


  Build-tools: c2hs

  frameworks: CoreFoundation
  if flag(32bit) {
    cpp-options: -m32
  }
  -- Ugly hack (to get hsc2hs working) until GHC bug #5106 is fixed.
  cc-options: -march=core2 -U__BLOCKS__
