Name:                CoreFoundation
Version:             0.1
Synopsis:            Bindings to the Core Foundation API for Mac OS X and iOS.
Description:         This package provides bindings to the Core Foundation API for 
                     Mac OS X and iOS.  
                     .
                     Core Foundation is a C API which provides much of the
                     functionality of Apple's Objective-C Foundation framework.
                     This package provides a simpler interface than bindings like HOC
                     since it does not need to model Objective-C's
                     object-oriented interface.
                     . 
                     Several data types are \"toll-free bridged\" between Foundation and 
                     Core Foundation, meaning that the corresponding C and Objective-C 
                     types may be used interchangeably.  
                     The documentation of a module will note if 
                     an object is toll-free bridged.  
                     .
                     If you are building 32-bit applications, you should install this
                     package with @cabal install -f32bit@.
License:             BSD3
License-file:        LICENSE
Author:              Judah Jacobson, Reiner Pope
Maintainer:          judah.jacobson@gmail.com
Copyright:           Copyright (c) 2011 Judah Jacobson
                     Copyright (C) 2012 Reiner Pope
Category:            System
Build-type:          Simple
Cabal-version:       >=1.6
source-repository head
    type: git
    location: https://github.com/judah/CoreMac

flag 32bit
    Description: Use the 32-bit API.
    Default: False

Library
  -- Modules exported by the library.
  Exposed-modules:  
        System.CoreFoundation
        System.CoreFoundation.Base
        System.CoreFoundation.Boolean
        System.CoreFoundation.Array
        System.CoreFoundation.Array.Mutable
        System.CoreFoundation.Data
        System.CoreFoundation.String
        System.CoreFoundation.Dictionary
        System.CoreFoundation.URL
        System.CoreFoundation.Bundle
        System.CoreFoundation.Error
        System.CoreFoundation.Foreign
        System.CoreFoundation.NotificationCenter
        System.CoreFoundation.Number
        System.CoreFoundation.PropertyList
        System.CoreFoundation.Preferences
        System.CoreFoundation.RunLoop
        System.CoreFoundation.Date

        System.CoreFoundation.Internal.TH

  Other-modules:  
        System.CoreFoundation.Array.Internal
        System.CoreFoundation.Internal.Unsafe
        System.CoreFoundation.String.TH

  -- Packages needed in order to build this package.
  Build-depends: base>=4.3 && < 4.6, bytestring==0.9.*, text==0.11.*,
                 template-haskell>=2.5 && < 2.8,
                 primitive >= 0.3 && < 0.5,
                 vector >= 0.5 && < 0.10,
                 time >= 1.0 && < 1.5,
                 deepseq >= 1.1 && < 1.4,
                 vector-algorithms >= 0.3 && < 0.6
  
  Extensions: ForeignFunctionInterface, TemplateHaskell, ScopedTypeVariables
              RecordWildCards, EmptyDataDecls, ExistentialQuantification,
              TypeSynonymInstances, FlexibleInstances, TypeFamilies, ViewPatterns,
              DeriveDataTypeable, GeneralizedNewtypeDeriving, StandaloneDeriving
  
  C-sources: 
    cbits/array.c
    cbits/runloop.c
    cbits/string.c
  include-dirs: include
  includes: 
    array.h
    runloop.h 
    string.h


  Build-tools: c2hs

  frameworks: CoreFoundation
  if flag(32bit) {
    cpp-options: -m32
  }
  -- Ugly hack (to get hsc2hs working) until GHC bug #5106 is fixed.
  cc-options: -march=core2 -U__BLOCKS__
  
  -- This is needed (rather than frameworks) when linking the TH splice
  -- when building this package on ghc-7.4.
  ghc-options: -framework CoreFoundation
