Name:                CoreGraphics

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.1

-- A short (one-line) description of the package.
-- Synopsis:            

-- A longer description of the package.
-- Description:         

-- The license under which the package is released.
License:             BSD3

-- The file containing the license text.
License-file:        LICENSE

-- The package author(s).
Author:              Judah Jacobson

-- An email address to which users can send suggestions, bug reports,
-- and patches.
Maintainer:          judah.jacobson@gmail.com

-- A copyright notice.
-- Copyright:           

Category:            System

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Library
  -- Modules exported by the library.
  Exposed-modules:  
        System.CoreGraphics
        System.CoreGraphics.DataProvider
        System.CoreGraphics.Font
        System.CoreGraphics.Context
        System.CoreGraphics.Geometry
        System.CoreGraphics.AffineTransform

  c-sources: cbits/context.c
             cbits/font.c
  include-dirs: includes
  includes: context.h font.h
  
  -- Packages needed in order to build this package.
  Build-depends: base==4.3.*, bytestring==0.9.*, text==0.11.*,
                 template-haskell==2.5.*,
                 CoreFoundation==0.1.*
  
  -- Modules not exported by this package.
  -- Other-modules:       

  Extensions: ForeignFunctionInterface, TemplateHaskell
              RecordWildCards, EmptyDataDecls
  
  Build-tools:         c2hs

  frameworks: CoreFoundation, Cocoa, Quartz
  -- Ugly hack (to get hsc2hs working) until GHC bug #5106 is fixed.
  cpp-options: -m32
  cc-options: -march=core2 -U__BLOCKS__ -m32
  ld-options: -m32
  -- Hack: TH needs this at compile time
  ghc-options: -framework CoreFoundation
