Name:                CoreGraphics
Version:             0.1
Synopsis:            Bindings to the CoreGraphics API for Mac OS X and iOS.
Description:         This package provides bindings to the Core Graphics API for
                     Mac OS X and iOS, also known as "Quartz".
                     . 
                     See the CoreFoundation package for more information.
                     .
                     If you are building 64-bit applications, you should install this
                     package with @cabal install -f-32bit@.
License:             BSD3
License-file:        LICENSE
Author:              Judah Jacobson
Maintainer:          judah.jacobson@gmail.com
Copyright:           Copyright (c) 2011 Judah Jacobson
Category:            System
Build-type:          Simple
Cabal-version:       >=1.6

flag 32bit
    Description: Use the 32-bit API.
    Default: True

Library
  Exposed-modules:  
        System.CoreGraphics
        System.CoreGraphics.DataProvider
        System.CoreGraphics.Font
        System.CoreGraphics.Context
        System.CoreGraphics.Geometry
        System.CoreGraphics.AffineTransform

  c-sources: cbits/context.c
             cbits/font.c
  include-dirs: includes
  includes: context.h font.h
  
  Build-depends: base==4.3.*, bytestring==0.9.*, text==0.11.*,
                 template-haskell==2.5.*,
                 CoreFoundation==0.1.*
  
  Extensions: ForeignFunctionInterface, TemplateHaskell
              RecordWildCards, EmptyDataDecls
  
  Build-tools: c2hs

  frameworks: CoreFoundation, Cocoa, Quartz
  if flag(32bit) {
    cpp-options: -m32
  }

  -- Ugly hack (to get hsc2hs working) until GHC bug #5106 is fixed.
  cc-options: -march=core2 -U__BLOCKS__ 
